<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- 品名 -->
    <LinearLayout
        android:id="@+id/linerLayout01product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text01product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text01_product"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/text01Kome01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text01_kome"
            android:textSize="14sp"/>

        <!-- ellipsize:文字が行に収まりきらない末尾を「...」表示 -->
        <!-- inputType:表示するキーボードを文字に指定 -->
        <EditText
            android:id="@+id/editText01product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/text01_hint_text"
            android:ellipsize="end"
            android:inputType="text"
            android:lines="1"
            android:maxLines="12"
            android:minLines="1"
            android:textSize="16sp"/>

    </LinearLayout>


    <!-- 産地 -->
    <LinearLayout
        android:id="@+id/linerLayout01MadeIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linerLayout01product">

        <TextView
            android:id="@+id/text01MadeIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text01_made_in"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text01kome02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text01_kome"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/editText01MadeIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/text01_hint_text"
            android:ellipsize="end"
            android:inputType="text"
            android:maxLength="12"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="16sp"/>

    </LinearLayout>

    <!-- 個数 -->
    <LinearLayout
        android:id="@+id/linerLayout01Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linerLayout01MadeIn">

        <TextView
            android:id="@+id/text01Number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text01_number"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text01kome03"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text01_kome"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/editText01Number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/text01_hint_number"
            android:ellipsize="end"
            android:inputType="number"
            android:maxLength="24"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="16sp"/>

    </LinearLayout>

    <!-- 単価 -->
    <LinearLayout
        android:id="@+id/linerLayout01Price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linerLayout01Number">

        <TextView
            android:id="@+id/text01Price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/text01_price"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/text01kome04"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/text01_kome"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/editText01Price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/text01_hint_number"
            android:ellipsize="end"
            android:inputType="number"
            android:maxLength="24"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="16sp"/>

    </LinearLayout>

    <!-- 登録ボタン -->
    <Button
        android:id="@+id/button01register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/button01_register"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@+id/linerLayout01Price"/>

    <!-- 選択用ラジオボタン -->
    <RadioGroup
        android:id="@+id/radioGroup01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/button01register">

        <RadioButton
            android:id="@+id/radioButton01Product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio01_product"
            android:checked="false"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radioButton01ListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio01_listview"
            android:checked="false"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/radioButton01TableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio01_tablelayout"
            android:checked="false"
            android:textSize="16sp"/>

    </RadioGroup>

    <!-- 表示ボタン -->
    <Button
        android:id="@+id/button01show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button01_show"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup01"/>


</android.support.constraint.ConstraintLayout>